# security-guardian

./: .gitignore  README.md  SKILL.md  pyproject.toml
adapters/: README.md  install.sh
adapters/claude-code/: hooks-settings.json  security-reviewer-agent.md  security-scan-command.md  security-scan-skill.md
adapters/cline/: .clinerules  mcp-config.json  security-guardian-mcp.py
docs/: launch-kit.md
middleware/: AGENT_INTEGRATION.md  README.md  __init__.py  audit_logger.py  config.py  license.py  mcp_proxy.py  policy_engine.py  setup.sh
middleware/config-templates/: README.md  claude-code-mcp.json  cline-mcp.json  cursor-mcp.json
middleware/test/: fake_mcp_server.py  test_e2e.py  test_integration.py  test_integration_v2.py  test_real_mcp.py
references/: rules.md
scripts/: __init__.py  feishu_reporter.py  fix.py  git-hook.py  pdf_report.py  scan.py  weekly_scan.py
src/security_guardian/: __init__.py  cli.py
templates/: .pre-commit-config.yaml  github-actions.yml  pre-commit
tests/: test_scan.py
tools/: demo_gif.py  screenshot.py
